// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NextWordPressHealthCheck > should pass for a valid PANTHEON_CMS_ENDPOINT and invalid auth 1`] = `
[
  "Checking for PANTHEON_CMS_ENDPOINT or WPGRAPHQL_URL...",
  "No .env* file found, assuming production environment.",
  "|__✅ PANTHEON_CMS_ENDPOINT is set!",
  "Validating CMS endpoint...",
  "|__✅ PANTHEON_CMS_ENDPOINT is valid!",
  "Validating Menu Item endpoint...",
  "|__✅ Menu Items endpoint is valid!",
  "Validating authentication...",
  "|__💡 WP_APPLICATION_USERNAME is required for preview but is not set.",
  "|____ Get the WP_APPLICATION_USERNAME here: 🔗 https://wordpress.test/wp/wp-admin/users.php",
  "|__💡 WP_APPLICATION_PASSWORD is required for preview but is not set.",
  "|____ Set a new WP_APPLICATION_PASSWORD here by clicking edit: 🔗 https://wordpress.test/wp/wp-admin/users.php",
  "|__💡 Auth not valid.",
  "|____ Ensure the WP_APPLICATION_USERNAME and WP_APPLICATION_PASSWORD are correct.",
  "⏭  Skipping preview endpoint validation -- authorization required.",
]
`;

exports[`NextWordPressHealthCheck > should pass for a valid WPGRAPHQL_URL and invalid auth 1`] = `
[
  "Checking for PANTHEON_CMS_ENDPOINT or WPGRAPHQL_URL...",
  "No .env* file found, assuming production environment.",
  "|__✅ WPGRAPHQL_URL is set!",
  "Validating CMS endpoint...",
  "|__✅ WPGRAPHQL_URL is valid!",
  "Validating Menu Item endpoint...",
  "|__✅ Menu Items endpoint is valid!",
  "Validating authentication...",
  "|__💡 WP_APPLICATION_USERNAME is required for preview but is not set.",
  "|____ Get the WP_APPLICATION_USERNAME here: 🔗 https://wordpress.test/wp/wp-admin/users.php",
  "|__💡 WP_APPLICATION_PASSWORD is required for preview but is not set.",
  "|____ Set a new WP_APPLICATION_PASSWORD here by clicking edit: 🔗 https://wordpress.test/wp/wp-admin/users.php",
  "|__💡 Auth not valid.",
  "|____ Ensure the WP_APPLICATION_USERNAME and WP_APPLICATION_PASSWORD are correct.",
  "⏭  Skipping preview endpoint validation -- authorization required.",
]
`;

exports[`NextWordPressHealthCheck > should pass for a valid backend and valid auth 1`] = `
[
  "Checking for PANTHEON_CMS_ENDPOINT or WPGRAPHQL_URL...",
  "No .env* file found, assuming production environment.",
  "|__✅ PANTHEON_CMS_ENDPOINT is set!",
  "Validating CMS endpoint...",
  "|__✅ PANTHEON_CMS_ENDPOINT is valid!",
  "Validating Menu Item endpoint...",
  "|__✅ Menu Items endpoint is valid!",
  "Validating authentication...",
  "|__✅ Auth is valid!",
  "Checking for PREVIEW_SECRET...",
  "|__✅ PREVIEW_SECRET is set.",
  "|__✅ Preview is valid!",
]
`;

exports[`NextWordPressHealthCheck > should pass for a valid backend and valid auth but no preview secret 1`] = `
[
  "Checking for PANTHEON_CMS_ENDPOINT or WPGRAPHQL_URL...",
  "No .env* file found, assuming production environment.",
  "|__✅ PANTHEON_CMS_ENDPOINT is set!",
  "Validating CMS endpoint...",
  "|__✅ PANTHEON_CMS_ENDPOINT is valid!",
  "Validating Menu Item endpoint...",
  "|__✅ Menu Items endpoint is valid!",
  "Validating authentication...",
  "|__✅ Auth is valid!",
  "Checking for PREVIEW_SECRET...",
  "|__💡 PREVIEW_SECRET env var is not set.",
  "|____ To set a new secret, go to 🔗 https://wordpress.test/admin/structure/dp-preview-site and edit the preview site you want to use.",
  "⏭  Skipping preview endpoint validation -- PREVIEW_SECRET required.",
]
`;

exports[`NextWordPressHealthCheck > should show a helpful error message if the backend is invalid 1`] = `
[
  "Checking for PANTHEON_CMS_ENDPOINT or WPGRAPHQL_URL...",
  "No .env* file found, assuming production environment.",
  "|__✅ PANTHEON_CMS_ENDPOINT is set!",
  "Validating CMS endpoint...",
  "|__❌ PANTHEON_CMS_ENDPOINT could not be fetched from.
Check that invalid.wordpress.test is valid and provides a 200 response",
]
`;
